Ensure lightbox covers full viewport by setting html min-height and body height.

--- a/themes/kurtpaullevy-understrap-child/css/child-theme.css
+++ b/themes/kurtpaullevy-understrap-child/css/child-theme.css
@@ -22668,8 +22668,13 @@ body.blog .nav-category-menu {
   src: url(../fonts/Inter-Regular.ttf);
   font-weight: normal;
 }
-html, body {
+body {
   height: 100%;
+  margin: 0;
+}
+
+html {
+  min-height: 100vh;
   margin: 0;
 }
 
